# haskell_market_basket

./: CHANGELOG.md  README.md  haskell-market-basket.cabal
app/: Main.hs  MoodyIntSet.hs  Utils.hs
fixtures/: sample_DB.txt  sample_data.txt  tl20ni100NT10K.transactions.txt
report/: proposal.md  report.md
