cabal-version:      2.4
name:               haskell-market-basket
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Indictor
maintainer:         daniel.indictor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-market-basket
    main-is:            Main.hs
    other-modules:      Utils, MoodyIntSet

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.3.0, 
                      containers >= 0.6, 
                      deepseq >= 1.4, 
                      parallel >= 3.0,
                      bytestring >= 0.11,
                      monad-loops >= 0.4,
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -Wall -rtsopts=all -threaded -eventlog

